--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         ar-modes="scene-viewer webxr quick-look" 
         ar-placement="floor"
         ar-scale="auto"
+        scale="0.1 0.1 0.1"
         camera-controls 
         shadow-intensity="1.5"
         shadow-softness="0.8"
