--- a/driver.html
+++ b/driver.html
@@ -95,7 +95,7 @@
     <script>
         // *** آدرس فایل مدل سه بعدی لباس (حتما فرمت .glb باشد) ***
         // این یک مدل نمونه ربات است. شما باید فایل لباس خود را آپلود و نامش را اینجا بگذارید
-        const MODEL_URL = 'https://modelviewer.dev/shared-assets/models/RobotExpressive.glb'; 
+        const MODEL_URL = 'suit.glb'; // آدرس فایل آپلود شده; 
         
         const videoElement = document.getElementsByClassName('input_video')[0];
         const canvas3d = document.getElementById('canvas3d');
