--- a/index.html
+++ b/index.html
@@ -51,20 +51,7 @@
         .logo-text { color: #fff; font-size: 1.1rem; font-weight: 700; letter-spacing: 1px; }
         .logo-highlight { color: #ff0040; }
         
-        /* دکمه رفتن به صفحه لباس */
-        .driver-btn {
-            background: rgba(255, 255, 255, 0.1); 
-            color: #fff; 
-            text-decoration: none;
-            padding: 8px 15px;
-            border-radius: 20px; 
-            font-size: 0.8rem; 
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            transition: all 0.3s;
-            display: flex; align-items: center; gap: 8px;
-        }
-        .driver-btn:hover { background: rgba(255, 0, 64, 0.8); border-color: #ff0040; }
-
+        /* نشانگر وضعیت AR */
         .status-badge {
             background: rgba(0, 255, 136, 0.1); color: #00ff88; padding: 6px 12px;
             border-radius: 20px; font-size: 0.75rem; border: 1px solid rgba(0, 255, 136, 0.3);
@@ -91,10 +78,7 @@
     <div class="ui-overlay">
         <div class="header-glass">
             <div class="logo-text">F1 <span class="logo-highlight">AR</span> HUB</div>
-            
-            <a href="driver.html" class="driver-btn">
-                👕 پرو لباس
-            </a>
+            <div class="status-badge"><div class="blink-dot"></div>AR READY</div>
         </div>
     </div>
 
@@ -122,7 +106,9 @@
 
     <script>
         const modelViewer = document.querySelector('model-viewer');
-        modelViewer.addEventListener('load', () => { console.log('F1 Car Loaded'); });
+        modelViewer.addEventListener('load', () => {
+            console.log('F1 Car Loaded - Ready for AR');
+        });
     </script>
 
 </body>
