--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <model-viewer 
         id="viewer"
-        src="https://f1-ar-nine.vercel.app/assets/car.glb"
+        src="https://f1-ar-nine.vercel.app/car.glb"
         alt="F1 Racing Car"
         ar
         ar-modes="webxr scene-viewer quick-look" 
